@@ -4,22 +4,15 @@ version := "$version$"
 
 scalaVersion := "$scalaVersion$"
 
-libraryDependencies += "org.apache.spark" %% "spark-core" % "$sparkVersion$" % Provided
-libraryDependencies += "org.apache.spark" %% "spark-sql" % "$sparkVersion$" % Provided
-
-libraryDependencies += "org.scalatest" %% "scalatest" % "3.2.9" % "test"
+libraryDependencies ++= Seq(
+  "org.apache.spark" %% "spark-core" % "$sparkVersion$" % Provided,
+  "org.apache.spark" %% "spark-sql" % "$sparkVersion$" % Provided,
+ "org.scalatest" %% "scalatest" % "3.2.15" % "test"
+)
 
 // test suite settings
 Test / fork := true
 //jvm settings
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:+UseContainerSupport")
+javaOptions ++= Seq("-Xms1024M", "-Xmx2048M", "--add-exports java.base/sun.nio.ch=ALL-UNNAMED")
 // Show runtime of tests
 Test / testOptions += Tests.Argument(TestFrameworks.ScalaTest, "-oD")
-
-// JAR file settings
-
-// don't include Scala in the JAR file
-//assemblyOption in assembly := (assemblyOption in assembly).value.copy(includeScala = false)
-
-// Add the JAR file naming conventions described here: https://github.com/MrPowers/spark-style-guide#jar-files
-// You can add the JAR file naming conventions by running the shell script
